api castgroup ferias

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/castgroup
+spring.datasource.url=jdbc:postgresql://localhost:5432/castgroup_api_ferias
 spring.datasource.username=postgres
 spring.datasource.password=docker
 
